<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">nHentai</string>
    <string name="main_logo">nhentai logo</string>
    <string name="main_search_button">Main search button</string>
    <string name="main_item_description">Main item description</string>
    <string name="random">Random</string>
    <string name="tags">Tags</string>
    <string name="artists">Artists</string>
    <string name="groups">Groups</string>
    <string name="info">Info</string>
    <string name="parodies">Parodies</string>
    <string name="characters">Characters</string>
    <string name="search">Search</string>
    <string name="search_result">Result for: %s</string>
    <string name="loading">Loading, please wait</string>
    <string name="refreshing_gallery">Refreshing you gallery</string>
    <string name="previous">\f054</string>
    <string name="next">Next</string>
    <string name="previous_label">Previous</string>
    <string name="next_label">Next</string>
    <string name="book_id_label">Doujinshi ID:</string>
    <string name="tags_label">Tags:</string>
    <string name="artists_label">Artists:</string>
    <string name="languages_label">Languages:</string>
    <string name="categories_label">Categories:</string>
    <string name="parodies_label">Parodies:</string>
    <string name="characters_label">Characters:</string>
    <string name="groups_label">Groups:</string>
    <string name="favorite_label">Favorites:</string>
    <string name="count">(%s)</string>
    <string name="main_item_japanese_sample">(C93) [studio A (Inanaki Shiki)] Iyarashii Houshi-bu no Kanojo-tachi. (Yahari Ore no Seishun Love Come wa Machigatteiru.) [Chinese] [無邪氣漢化组]</string>
    <string name="page_number">1</string>
    <string name="nothing_to_show">Nothing here</string>
    <string name="internet_error">Look like you lost your connection!</string>
    <string name="book_cover">Doujinshi cover</string>
    <string name="title_1">Title 1</string>
    <string name="no_recent_book">You\'ve not read any doujinshi recently!</string>
    <string name="no_favorite_book">You have no favorite doujinshi!</string>
    <string name="no_downloaded_book">Nothing was downloaded!</string>
    <string name="years_elapsed">%s years ago</string>
    <string name="year_elapsed">1 year ago</string>
    <string name="months_elapsed">%s months ago</string>
    <string name="month_elapsed">1 month ago</string>
    <string name="weeks_elapsed">%s weeks ago</string>
    <string name="week_elapsed">1 week ago</string>
    <string name="days_elapsed">%s days ago</string>
    <string name="day_elapsed">1 day ago</string>
    <string name="hours_elapsed">%s hours ago</string>
    <string name="hour_elapsed">1 hour ago</string>
    <string name="minutes_elapsed">%s minutes ago</string>
    <string name="minute_elapsed">1 minute ago</string>
    <string name="just_now">just now</string>
    <string name="page_count">%s pages</string>
    <string name="uploaded">Uploaded %s</string>
    <string name="NotoSansRegular" translatable="false">fonts/NotoSans-Regular.ttf</string>
    <string name="NotoSansBold" translatable="false">fonts/NotoSans-Bold.ttf</string>
    <string name="NotoSansItalic" translatable="false">fonts/NotoSans-Italic.ttf</string>
    <string name="NotoSansBoldItalic" translatable="false">fonts/NotoSans-BoldItalic.ttf</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_with_count">Favorite (%s)</string>
    <string name="download">Download</string>
    <string name="clear_downloaded_data">Delete downloaded data</string>
    <string name="preview">Preview</string>
    <string name="last_visited_page">Continue reading from page</string>
    <string name="page_thumbnail">Page thumbnail</string>
    <string name="recommend_for_you">More like this</string>
    <string name="maybe_you_interest">Doujinshis you may like</string>
    <string name="book_page">Doujinshi page</string>
    <string name="back">Back</string>
    <string name="book_title">Doujinshi title</string>
    <string name="bottom_reader">Page %s of %s</string>
    <string name="back_to_gallery">Back to gallery</string>
    <string name="close">Close</string>
    <string name="download_progress">Page %s is downloaded</string>
    <string name="all_pages_downloaded">All pages are downloaded</string>
    <string name="dismiss">Dismiss</string>
    <string name="ok">OK</string>
    <string name="view">View</string>
    <string name="done">Done</string>
    <string name="toast_storage_permission_require">Please allow app to store data in your device!</string>
    <string name="preview_download_progress">Downloaded %s/%s pages</string>
    <string name="preview_deleting_progress">Deleted %d/%d pages</string>
    <string name="cleared">Clear</string>
    <string name="fail_to_download">Could not download %s items</string>
    <string name="fail_to_delete">Could not delete %d items</string>
    <string name="is_book_being_downloaded">Downloading</string>
    <string name="is_downloading_this_book">This doujinshi is being downloaded.\nPlease wait until it completes.</string>
    <string name="is_downloading_another_book">This doujinshi was queued. It will be downloaded after the doujinshi %s.</string>
    <string name="reload_library">Reload Library</string>
    <string name="book_list_refreshing_title">Refreshing doujinshi list</string>
    <string name="book_list_refreshing_description">Doujinshi list is being refreshed.\nPlease try again later.</string>
    <string name="pull_down">Pull it down</string>
    <string name="release_to_refresh">Release to refresh</string>
    <string name="updating">Updating%s</string>
    <string name="updated">Updated</string>
    <string name="last_update">Last update: %s</string>
    <string name="are_tags_being_downloaded">Tags downloading</string>
    <string name="is_downloading_tags">Tags lists are being downloaded.\nPlease wait until they complete.</string>
    <string name="app_upgrade_notification">We have a newer version. Please check it out.</string>
    <string name="app_upgrade_button">Install version %s</string>
    <string name="app_upgrade_notification_title">Version %s is available</string>
    <string name="app_upgrade_notification_message">You can check it out to have a better experience</string>
    <string name="no_network_title">No internet connection</string>
    <string name="no_network_description">Your device is not connected to the Internet. Please check your connection and try again.</string>
    <string name="under_construction_title">Not available</string>
    <string name="feature_under_construction_description">Under construction feature.\nPlease try again later</string>
    <string name="refresh">Refresh</string>
    <string name="recent">Viewed</string>
    <string name="recent_screen_title">Recently read</string>
    <string name="switch_recent_list">Switch</string>
    <string name="about_us">About This App</string>
    <string name="app_version_template">Version: %s</string>
    <string name="tag_data_version_template">Tag data version: %s</string>
    <string name="repository_url_template">See other versions at: </string>
    <string name="email_url_template">Email: </string>
    <string name="twitter_url_template">Twitter: </string>
    <string name="app_upgrade_notification_receive">Allow app upgrade notification</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloaded_books">Downloaded Doujinshis</string>
    <string name="downloading">Downloading</string>
    <string name="downloading_books">Downloading Doujinshis</string>
    <string name="pending_download_failure_template">Could not download %d/%d pages</string>
    <string name="no_pending_item">You\'re not downloading any doujinshi</string>
    <string name="downloading_book">Downloading doujinshi</string>
    <string name="deleting_book">Deleting doujinshi</string>
    <string name="downloading_in_progress">Downloading in progress</string>
    <string name="deleting_in_progress">Deleting in progress</string>
    <string name="downloading_failure">Downloading failure</string>
    <string name="deleting_failure">Deleting failure</string>
    <string name="downloading_completed">Downloading finished</string>
    <string name="deleting_book_completed">Deleted doujinshi</string>
    <string name="downloading_completed_template">The doujinshi %s was downloaded</string>
    <string name="deleting_completed_template">The doujinshi %s was deleted</string>
    <string name="downloading_failed_template">Could not download %d/%d pages of the doujinshi %s</string>
    <string name="deleting_failed_template">Could not delete the doujinshi %s</string>
    <string name="book_progress_template">Doujinshi %s, progress: %d/%d</string>
    <string name="downloading_book_failed_message">Could not download the doujinshi %s\nPlease try it again</string>
    <string name="migrating_books">Updating your recent/favorite doujinshis</string>
    <string name="migration_progress_template">Updated %d/%d doujinshis</string>
    <string name="migration_progress_with_failure_template">Updated %d doujinshis, %d doujinshis failed, total: %d</string>
    <string name="migration_failure_template">Could not update %d/%d doujinshis</string>
    <string name="migration_completed">Your recent/favorite doujinshis were updated</string>
    <string name="migration_result">Updated %d/%d doujinshis\nCould not update %d/%d doujinshis</string>
    <string name="downloading_tags">Downloading tag data</string>
    <string name="downloading_tags_progress">Tag data is being downloaded\nCurrent page: %d/%d\nArtists: %d\nCharacters: %d\nCategories: %d\nLanguages: %d\nParodies: %d\nGroups: %d\nTags: %d\nUnknown types: %d</string>
    <string name="downloading_tags_failed">Could not download tag data of page %d</string>
    <string name="downloading_tags_completed">Downloading tag data completed</string>
    <string name="downloading_tags_already_started_title">Downloading started</string>
    <string name="downloading_tags_already_started_message">Tag data is being downloaded.\nDo you want to stop it?</string>
    <string name="stop_downloading_tags">Stop</string>
    <string name="notification_channel_name">NHentai App</string>
    <string name="notification_channel_description">Hentai manga</string>
    <string name="tags_downloading_completed">Tag list is downloaded, new data version: %d</string>
    <string name="tags_downloading_failed">Could not download the tag list</string>
    <string name="number_of_pages">Number of pages: %d</string>
    <string name="downloaded_pages">Downloaded pages: %d</string>
    <string name="number_of_artists">Artists: %d</string>
    <string name="number_of_characters">Characters: %d</string>
    <string name="number_of_categories">Categories: %d</string>
    <string name="number_of_languages">Languages: %d</string>
    <string name="number_of_parodies">Parodies: %d</string>
    <string name="number_of_groups">Groups: %d</string>
    <string name="number_of_tags">Tags: %d</string>
    <string name="number_of_unknown">Unknown: %d</string>
    <string name="enable_censored">Enable censored</string>
    <string name="install">Install</string>
    <string name="whats_new">What\'s New</string>
    <string name="available_alternative_domains">Choose an alternative server</string>
    <string name="what_is_an_alternative_domain">What is an alternative server?</string>
    <string name="alternative_domain_explanation">An alternative server is a 3rd party server that can redirect the requests from this app to the nHentai server. The 3rd party server can bypass the limitation on adult content in some countries. They will be the solution you need if you are living in the countries where the nHentai server is blocked. You may be able to get rid of VPN if you use this solution. Consider giving it a try.</string>
</resources>