<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_all_corners_small_radius"
    android:padding="@dimen/space_medium">

    <nhdphuong.com.manga.views.customs.MyTextView
        android:id="@+id/mtvVersionName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_small"
        android:layout_marginRight="@dimen/space_small"
        android:textColor="@color/grey_4"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/layoutInstall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:myFont="@string/NotoSansBold"
        tools:text="@string/app_version_template" />

    <nhdphuong.com.manga.views.customs.MyTextView
        android:id="@+id/mtvWhatsNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/whats_new"
        android:textColor="@color/grey_2"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mtvVersionName"
        app:myFont="@string/NotoSansBold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutInstall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <nhdphuong.com.manga.views.customs.MyTextView
            android:id="@+id/buttonInstall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_red_rounded_all_corners"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="@dimen/space_medium"
            android:paddingLeft="@dimen/space_medium"
            android:paddingTop="@dimen/space_small"
            android:paddingEnd="@dimen/space_medium"
            android:paddingRight="@dimen/space_medium"
            android:paddingBottom="@dimen/space_small"
            android:text="@string/install"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:myFont="@string/NotoSansRegular" />

        <ProgressBar
            android:id="@+id/pbInstallationProgress"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <nhdphuong.com.manga.views.customs.MyTextView
        android:id="@+id/mtvWhatsNewContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:textColor="@color/grey_4"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mtvWhatsNew"
        app:myFont="@string/NotoSansRegular"
        tools:text="Somethings new here" />

</androidx.constraintlayout.widget.ConstraintLayout>